drones.css
body{
	background:linear-gradient(#7ccce8, white, #7ccce8);
	width:100%;
}
#MainSplash{
	position:fixed;
	top:50%;
	width:100%;
	text-align:center;
	transform:translateY(-50%);
	color:#F5D76E;
}
#MainSplash h1{
	font-size:1000%;
}
h2{
	font-size:300%;
}

.BGCover{
	background-size:cover;
	background-repeat:no-repeat;
	background-position:center;
}

#Drone{
	width:20vw;
	height:10vw;
	
	position:fixed;
	z-index:10;
	
	transform:rotateY(180deg);
	background-image:url("/img/SaroshDraws/Side_Drone.svg");
	
	
	bottom:12vh;left:40vw;
}

a{
	color:black;
}
a:visited{
	color:black;
}
a:hover{
	text-decoration:none;
}


p{
	
	z-index:9999;
}


#BG1{
	width:150%;
	height:100vh;
	position:fixed;
	z-index:-1;
	
	background-image:url("/img/clouds-161581.svg");
}



#Head2{
	position:fixed;
	left:10%;
	bottom:20%;
}

#Text2{
	position:fixed;
	bottom:20%;
	right:10vw;
	width:40vw;
	text-align:right;
}
#Pic2{
	background-image:url('https://upload.wikimedia.org/wikipedia/en/8/8c/Nuvola_apps_package.svg.png');
	width:8vw;
	height:8vw;
	position:fixed;
}



#Head3{
	position:fixed;
	left:10%;
	top:25%;
}

#Text3{
	position:fixed;
	top:50%;
	right:2vw;
	width:40vw;
	text-align:right;
}



#Head4{
	position:fixed;
	left:10%;
	bottom:50%;
	max-height:10vh;
}

#Text4{
	position:fixed;
	top:50%;
	left:10vw;
	width:40vw;
	text-align:left;
}
#Pic4{
	background-image:url("https://pixabay.com/static/uploads/photo/2012/04/10/17/24/airplane-26560_960_720.png");
	height:100vw;
	width:200vw;
	position:fixed;
	background-position: center;
	background-size:contain;
	transform:rotateY(180deg);
	top:-45vw;
	left:0;
}







#Sec5{
	position:fixed;
	top:25%;
	height:50%;
	right:10%;
	text-align:right;
	
	background:rgba(236, 240, 241,0.6);
	padding: 0 5vw;
	
	display: flex;
  align-items: center;
  justify-content: flex-end;
}

#BG5{
	width:120%;
	right:0;
	height:150vh;
	top:-49vh;
	position:fixed;
	z-index:-1;
	
	background-image:url("/img/SaroshDraws/Schoolno_kids.svg");
	background-position: 100% 100%;
}

